Fixed photogrid on firefox added grid layout change anim when deleting photos Added parallel processing on photo-upload with worker pools redesigned upload flow Keybind live update Small bug fixes

--- a/frontend/src/components/toaster.module.css
+++ b/frontend/src/components/toaster.module.css
@@ -14,6 +14,8 @@
   .toaster {
     box-shadow: 0 0 2px 0 rgba(255, 255, 255, 0.492) !important;
 
+    background-color: rgb(0, 0, 0, 0.1) !important;
+
     /* display: none; */
   }
 }
